third_party/blink/web_tests/external/wpt/trusted-types/idlharness.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
PASS TrustedHTML interface: existence and properties of interface object
PASS TrustedHTML interface object length
PASS TrustedHTML interface object name
PASS TrustedHTML interface: existence and properties of interface prototype object
PASS TrustedHTML interface: existence and properties of interface prototype object's "constructor" property
PASS TrustedHTML interface: existence and properties of interface prototype object's @@unscopables property
PASS TrustedHTML interface: stringifier
PASS TrustedScript interface: existence and properties of interface object
PASS TrustedScript interface object length
PASS TrustedScript interface object name
PASS TrustedScript interface: existence and properties of interface prototype object
PASS TrustedScript interface: existence and properties of interface prototype object's "constructor" property
PASS TrustedScript interface: existence and properties of interface prototype object's @@unscopables property
PASS TrustedScript interface: stringifier
PASS TrustedScriptURL interface: existence and properties of interface object
PASS TrustedScriptURL interface object length
PASS TrustedScriptURL interface object name
PASS TrustedScriptURL interface: existence and properties of interface prototype object
PASS TrustedScriptURL interface: existence and properties of interface prototype object's "constructor" property
PASS TrustedScriptURL interface: existence and properties of interface prototype object's @@unscopables property
PASS TrustedScriptURL interface: stringifier
PASS TrustedURL interface: existence and properties of interface object
PASS TrustedURL interface object length
PASS TrustedURL interface object name
PASS TrustedURL interface: existence and properties of interface prototype object
PASS TrustedURL interface: existence and properties of interface prototype object's "constructor" property
PASS TrustedURL interface: existence and properties of interface prototype object's @@unscopables property
PASS TrustedURL interface: stringifier
PASS TrustedTypePolicyFactory interface: existence and properties of interface object
PASS TrustedTypePolicyFactory interface object length
PASS TrustedTypePolicyFactory interface object name
PASS TrustedTypePolicyFactory interface: existence and properties of interface prototype object
PASS TrustedTypePolicyFactory interface: existence and properties of interface prototype object's "constructor" property
PASS TrustedTypePolicyFactory interface: existence and properties of interface prototype object's @@unscopables property
PASS TrustedTypePolicy interface: existence and properties of interface object
PASS TrustedTypePolicy interface object length
PASS TrustedTypePolicy interface object name
PASS TrustedTypePolicy interface: existence and properties of interface prototype object
PASS TrustedTypePolicy interface: existence and properties of interface prototype object's "constructor" property
PASS TrustedTypePolicy interface: existence and properties of interface prototype object's @@unscopables property
Harness: the test ran to completion.

